--- a/deep-learning.html
+++ b/deep-learning.html
@@ -55,7 +55,7 @@
 <p><span class="badge badge-light">Montreal, Canada</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://plumerai.workable.com/j/3A0A0AB1D2'>Plumerai - Jobs: Deep Learning Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://plumerai.workable.com/j/3A0A0AB1D2'>Plumerai - Jobs: Deep Learning Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Amsterdam North Holland, Netherlands</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -63,7 +63,7 @@
 <p><span class="badge badge-light">Amsterdam North Holland, Netherlands</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://plumerai.workable.com/j/BF90B8A976'>Plumerai - Jobs: Deep Learning Scientist - Apply online</a></h5> 
+<h5><a href='https://plumerai.workable.com/j/BF90B8A976'>Plumerai - Jobs: Deep Learning Scientist - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -81,7 +81,7 @@ Vision / Computational geometry. GIT version control (good knowledge). English
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/pathrobotics/jobs/4364877002'>Job Application for Artificial Intelligence Researcher I Deep Reinforcement Learning at Path Robotics</a></h5> 
+<h5><a href='https://boards.greenhouse.io/pathrobotics/jobs/4364877002'>Job Application for Artificial Intelligence Researcher I Deep Reinforcement Learning at Path Robotics</a></h5> 
 <p><span class="badge badge-light">Columbus, OH</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -89,7 +89,7 @@ Vision / Computational geometry. GIT version control (good knowledge). English
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://plumerai.workable.com/j/F458D0F2CD'>Plumerai - Jobs: Deep Learning Engineer - Apply online</a></h5> 
+<h5><a href='https://plumerai.workable.com/j/F458D0F2CD'>Plumerai - Jobs: Deep Learning Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 9, 2019 ... Apply online for the job of Deep Learning Engineer at Plumerai.</p>
 <hr/>
@@ -181,7 +181,7 @@ Learning team. Academic and commercial groups around the world are using?...</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://eygbl.referrals.selectminds.com/jobs/senior-ai-scientist-deep-learning-86705'>Senior AI Scientist - Deep Learning - EY Careers</a></h5> 
+<h5><a href='https://eygbl.referrals.selectminds.com/jobs/senior-ai-scientist-deep-learning-86705'>Senior AI Scientist - Deep Learning - EY Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Job Summary: Reporting to the AI Science Leader the responsibility of this 
 position is to create products or tools built on Artificial Intelligence...</p>
@@ -265,7 +265,7 @@ daytime?...</p>
 <p><span class="badge badge-light">Palo Alto, California</span></p>
 <p>Posted on: 2019-06-07</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/ojwP9fwx'>The Climate Corporation Careers - Data Scientist - Deep Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/ojwP9fwx'>The Climate Corporation Careers - Data Scientist - Deep Learning</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-05</p>
 <hr/>
@@ -305,7 +305,7 @@ applied deep learning within autonomous vehicles and a strong level of expertise
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-05-21</p>
 <hr/>
-<h5><a href='https://jobs.surrey.ac.uk/vacancy.aspx?ref=098918-R'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.surrey.ac.uk/vacancy.aspx?ref=098918-R'>
 	098918-R Research Fellow in Computer Vision and Deep Learning - Jobs at the University of Surrey
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -340,7 +340,7 @@ applied deep learning within autonomous vehicles and a strong level of expertise
 <p>Apr 24, 2019 ... Paid travel to top research and developer conferences. Contributing to the open-
 source and research community is a fundamental part of your role. Competitive?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/whisperai/jobs/4259777002'>Job Application for Firmware Engineer for Deep Learning Hearing ...</a></h5> 
+<h5><a href='https://boards.greenhouse.io/whisperai/jobs/4259777002'>Job Application for Firmware Engineer for Deep Learning Hearing ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... We're looking for firmware engineers to build the future of hearing instruments 
 and take on significant leadership and responsibility at a fast-growing startup.</p>
@@ -431,7 +431,7 @@ Project?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
-<h5><a href='https://www.datarobot.com/careers/job/1615737/'>Deep Learning Engineer, Core Modeling in Kyiv | Open position | DataRobot</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.datarobot.com/careers/job/1615737/'>Deep Learning Engineer, Core Modeling in Kyiv | Open position | DataRobot</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
@@ -439,7 +439,7 @@ Project?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.datarobot.com/careers/job/1615742/'>Deep Learning Engineer, Core Modeling in San Francisco | Open position | DataRobot</a></h5> 
+<h5><a href='https://www.datarobot.com/careers/job/1615742/'>Deep Learning Engineer, Core Modeling in San Francisco | Open position | DataRobot</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
